add env variables

--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -5,7 +5,11 @@ build_targets:
   container:
     image: yourbase/yb_ubuntu:18.04
   name: default
-
+  environment:
+      - GRADLE_OPTS="-Dorg.gradle.console=plain -Dorg.gradle.internal.launcher.welcomeMessageEnabled=false"
+      - _JAVA_OPTIONS="-XX:ActiveProcessorCount=8 -Xmx8g -XX:+HeapDumpOnOutOfMemoryError -verbose:gc -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:-TraceClassUnloading -Xloggc:build-%t-%p.gc.log"
+      - CIRCLE_TEST_REPORTS=/home/circleci/junit
+      - CIRCLE_ARTIFACTS=/home/circleci/artifacts
 ci:
   builds:
   - build_target: default
